styles/form.css
form div {
    margin-right: 0!important;
    margin-left: 0!important;
}

form div div[hidden] {
    display: none !important;
}

form div div label,span {
    align-self: center;
    text-align: center;
}

form div div * {
    margin: 0 auto;
}

form div div button {
    background: var(--button-background);
    color: var(--button-foreground);
    border: none;
    border-radius: 0.7em;
    width: 3em;
    height: 3em;
    padding: 0px;
    align-self: center;
}

form div div img {
    padding: 0.25em;
    align-self: center;
    width: 35px;
    height: 35px;
}

form div div img.clicked {
    background: var(--button-background-clicked);
}

.config {
    display: grid;
    grid-gap: 5px;
    grid-template-rows: repeat(3, 1fr);
    grid-template-columns: repeat(2, 1fr)
}

.config select,input {
    background: var(--input-background);
    color: var(--input-foreground);
    border-radius: 0.7em;
    padding: 0.7em;
}

.config select {
    width: 100%;
}

.config input {
    border: none;
    width: calc(100% - 1.4em);
}

.config label {
    text-align: left;
}

.rocket {
    display: grid;
    grid-gap: 5px;
    grid-template-rows: repeat(4, 1fr);
    grid-template-columns: repeat(7, 1fr);
    padding: 0px!important;
}

.ship {
    display: grid;
    grid-gap: 5px;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(7, 1fr);
}

.ship label {
    width: 100%;
    text-align: center;
}

.hab {
    display: grid;
    grid-gap: 5px;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(2, 1fr);
}

.hab select,label {
    width: 100%;
}

.comment textarea {
    background: var(--input-background);
    color: var(--input-foreground);
    width: calc(100% - 1.4em);
    height: 8em;
    border-radius: 0.7em;
    padding: 0.7em;
}

.submit {
    font-family: sans-serif;
    width: 100%;
    padding: 1em;
    color: var(--button-foreground);
    background: var(--button-background);
    border: none;
    border-radius: 0.7em;
}

select {
    background: var(--input-background);
    color: var(--input-foreground);
    -webkit-appearance: none;
    padding: 1em;
    border: none;
    border-radius: 0.7em;
}

